# remote_code_oxidation

./: .gitignore  Cargo.toml  LICENSE  README.md  _config.yml  cayman_saas_jekyll-theme-cayman.scss  hash_params.md  index.md  process_hollowing.md  process_migration.md  tcp_reverse_shell.md  xor_params.md
.custom_shields/: hash_params.json  process_hollowing.json  process_migration.json  remote_access_trojan.json  tcp_reverse_shell.json  xor_params.json  xor_shellcode.json
.github/: clippy.yml
.github/workflows/: clippy.yml  linux.yml  release_assets.yml  rust.yml  shield_io_updater.yml  shields_io_data.yml  unix.yml  windows.yml
_includes/: code_button.js  code_header.html
_layouts/: default.html  head.html  post.html
assets/css/: maybe.css
assets/js/: code_button.js  idk.js
custom_shields/: process_migration.json  tcp_reverse_shell.json
docs/: _config.yml  hash_params.md  index.md  process_hollowing.md  process_migration.md  tcp_reverse_shell.md  xor_params.md
hash_params/: Cargo.toml  README.md
hash_params/src/: main.rs
process_hollowing/: Cargo.toml  README.md
process_hollowing/src/: config.rs  main.rs  process_hollowing_linux.rs  process_hollowing_windows.rs  process_hollowing_windows_antistring.rs
process_hollowing/src/rco_process_hollowing_linux/: mod.rs
process_hollowing/src/rco_process_hollowing_windows/: mod.rs
process_hollowing/src/rco_process_hollowing_windows_antistring/: mod.rs
process_hollowing/src/rco_process_migration_windows/: mod.rs
process_migration/: Cargo.toml  README.md
process_migration/src/: config.rs  main.rs  process_migration_linux.rs  process_migration_windows.rs  process_migration_windows_antistring.rs
process_migration/src/rco_process_migration_linux/: mod.rs
process_migration/src/rco_process_migration_unix/: mod.rs
process_migration/src/rco_process_migration_windows/: mod.rs
process_migration/src/rco_process_migration_windows_antistring/: mod.rs
rco_config/: Cargo.toml
rco_config/src/: lib.rs
rco_utils/: Cargo.toml
rco_utils/src/: lib.rs
remote_access_trojan/: Cargo.toml  README.md  build.rs  rat.proto
remote_access_trojan/rat_c2/: Cargo.toml  build.rs
remote_access_trojan/rat_c2/src/: main.rs
remote_access_trojan/rat_client/: Cargo.toml
remote_access_trojan/rat_implant/: Cargo.toml
remote_access_trojan/src/: client.rs  implant.rs  lib.rs  operator.rs  server.rs
src/basic_tcp_reverse_shell/: config.rs  rev_shell.rs
src/basic_tcp_reverse_shell/unix_rs/: mod.rs
src/basic_tcp_reverse_shell/windows_rs/: mod.rs
src/shellcode_injector_and_migrator/: config.rs  inj_and_mig.rs
src/shellcode_injector_and_migrator/unix_im/: mod.rs
src/shellcode_injector_and_migrator/windows_im/: mod.rs
tcp_reverse_shell/: Cargo.toml  README.md
tcp_reverse_shell/src/: main.rs  reverse_shell_linux.rs  reverse_shell_windows.rs  reverse_shell_windows_antistring.rs
tcp_reverse_shell/src/rco_rev_shell_unix/: mod.rs
tcp_reverse_shell/src/rco_reverse_shell_linux/: mod.rs
tcp_reverse_shell/src/rco_reverse_shell_windows/: mod.rs
tcp_reverse_shell/src/rco_reverse_shell_windows_antistring/: mod.rs
xor_params/: Cargo.toml  README.md
xor_params/src/: main.rs
xor_shellcode/: Cargo.toml  README.md
xor_shellcode/src/: main.rs
