[package]
name = "remote_code_oxidation"
version = "0.1.0"
edition = "2021"
authors = ["Kevin Conley <koins@duck.com>"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.release]
lto = true

[target.'cfg(windows)'.dependencies]
windows = { version = "0.28.0", features = ["Win32_Foundation", "Win32_Networking_WinSock", "Win32_Security", "Win32_System_Diagnostics_Debug", "Win32_System_Diagnostics_ToolHelp", "Win32_System_Memory", "Win32_System_Threading"] }

[[bin]]
name = "reverse_shell"
path = "src/basic_tcp_reverse_shell/rev_shell.rs"

[[bin]]
name = "shellcode_injector_and_migrator"
path = "src/shellcode_injector_and_migrator/inj_and_mig.rs"