[package]
authors = ["Kevin Conley <koins@duck.com>"]
description = "Creates a process and overwrites the entry point with shellcode (default to a reverse shell on localhost:4444)"
documentation = "https://kmanc.github.io/remote_code_oxidation/process_hollowing.html"
edition = "2021"
license = "MIT"
name = "process_hollowing"
repository = "https://github.com/kmanc/remote_code_oxidation/tree/main/process_hollowing"
rust-version = "1.59"
version = "1.10.4"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
xor = ["rco_utils/xor"]
antisand = ["rco_utils/antisand"]
antistring = ["rco_utils/antistring"]


[dependencies]
rco_config = {path = "../rco_config", version = ">=0.2.0"}
rco_utils = {path = "../rco_utils", version = ">=1.0.1"}

[target.'cfg(target_os="linux")'.dependencies]
nix.version = ">=0.27.0"
nix.features = [
    "process",
    "ptrace",
]

[target.'cfg(windows)'.dependencies]
windows.version = ">=0.52.0"
windows.features = [
    "Wdk_System_Threading",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Kernel",
    "Win32_System_Threading",
]
