[package]
name = "process_migration"
version = "0.1.0"
edition = "2021"
authors = ["Kevin Conley <koins@duck.com>"]
rust-version = "1.58"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[target.'cfg(windows)'.dependencies]
windows.version = ">=0.22.1"
windows.features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Memory",
    "Win32_System_Threading"
]
