[package]
name = "process_migration"
version = "1.6.0"
edition = "2021"
authors = ["Kevin Conley <koins@duck.com>"]
rust-version = "1.58"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
xor = []
antisand = ["rco_utils/antisand"]

[dependencies]
rco_config = {path = "../rco_config"}
rco_utils = {path = "../rco_utils"}

[target.'cfg(target_os="linux")'.dependencies]
nix = ">=0.16"

[target.'cfg(windows)'.dependencies]
windows.version = ">=0.22.1"
windows.features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Memory",
    "Win32_System_Threading" ]
