[package]
authors = ["Kevin Conley <koins@duck.com>"]
description = "Overwrites a running process' next instruction(s) with shellcode (default to a reverse shell on localhost:4444)"
documentation = "https://kmanc.github.io/remote_code_oxidation/process_migration.html"
edition = "2021"
license = "MIT"
name = "process_migration"
repository = "https://github.com/kmanc/remote_code_oxidation/tree/main/process_migration"
rust-version = "1.63"
version = "1.12.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
xor = ["rco_utils/xor"]
antisand = ["rco_utils/antisand"]
antistring = ["rco_utils/antistring"]

[dependencies]
rco_config = {path = "../rco_config", version = ">=0.2.0"}
rco_utils = {path = "../rco_utils", version = ">=1.0.1"}

[target.'cfg(target_os="linux")'.dependencies]
nix = {version = ">=0.29", features=["ptrace"]}

[target.'cfg(windows)'.dependencies]
windows.version = ">=0.44.0"
windows.features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Memory",
    "Win32_System_Threading" ]
