[package]
authors = ["Kevin Conley <koins@duck.com>"]
description = "Configuration for \"Remote Code Execution\"'s (RCO's) binaries"
edition = "2021"
license = "MIT"
name = "rco_config"
repository = "https://github.com/kmanc/remote_code_oxidation/tree/main/rco_config"
rust-version = "1.63"
version = "0.3.0"
