[package]
name = "rco_utils"
version = "0.3.3"
edition = "2021"
authors = ["Kevin Conley <koins@duck.com>"]
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
xor = []
antisand = ["windows", "rand"]

[target.'cfg(windows)'.dependencies]
rand.optional = true
rand.version = ">=0.8.5"
windows.optional = true
windows.version = ">=0.35.0"
windows.features = [
    "Win32_Foundation",
    "Win32_Networking",
    "Win32_Networking_WinInet" ]