[package]
authors = ["Kevin Conley <koins@duck.com>"]
description = "Shared functions for \"Remote Code Execution\"'s (RCO's) binaries"
edition = "2021"
license = "MIT"
name = "rco_utils"
repository = "https://github.com/kmanc/remote_code_oxidation/tree/main/rco_utils"
rust-version = "1.59"
version = "1.2.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
xor = []
antisand = ["windows", "rand"]
antistring = ["windows"]

[target.'cfg(windows)'.dependencies]
rand.optional = true
rand.version = ">=0.8.5"
windows.optional = true
windows.version = ">=0.47.0"
windows.features = [
    "Win32_Foundation",
    "Win32_Networking",
    "Win32_Networking_WinInet",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices" ]
