[package]
name = "remote_access_trojan"
version = "0.1.0"
edition = "2021"
authors = ["Kevin Conley <koins@duck.com>"]
rust-version = "1.58"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rco_config = {path = "../rco_config"}
prost = ">=0.9"
tonic = ">=0.6"
tokio = { version = ">=1.17", features = ["rt-multi-thread"] }

[build-dependencies]
tonic-build = ">=0.6"

[[bin]]
name = "operator"
path = "src/operator.rs"

[[bin]]
name = "implant"
path = "src/implant.rs"

[[bin]]
name = "server"
path = "src/server.rs"