[package]
name = "tcp_reverse_shell"
version = "1.1.4"
edition = "2021"
authors = ["Kevin Conley <koins@duck.com>"]
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rco_config = {path = "../rco_config"}

[target.'cfg(windows)'.dependencies]
windows.version = ">=0.34.0"
windows.features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Networking_WinSock",
    "Win32_System_Threading" ]
