[package]
authors = ["Kevin Conley <koins@duck.com>"]
description = "Creates a reverse shell (default to localhost:4444)"
documentation = "https://kmanc.github.io/remote_code_oxidation/tcp_reverse_shell.html"
edition = "2021"
license = "MIT"
name = "tcp_reverse_shell"
repository = "https://github.com/kmanc/remote_code_oxidation/tree/main/tcp_reverse_shell"
rust-version = "1.59"
version = "1.5.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
antisand = ["rco_utils/antisand"]
antistring = ["rco_utils/antistring"]

[dependencies]
rco_config = {path = "../rco_config", version = ">=0.2.0"}
rco_utils = {path = "../rco_utils", version = ">=1.0.1"}

[target.'cfg(windows)'.dependencies]
windows.version = ">=0.46.0"
windows.features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Networking_WinSock",
    "Win32_System_SystemInformation",
    "Win32_System_Threading" ]
