[package]
name = "xor_params"
version = "1.2.0"
edition = "2021"
authors = ["Kevin Conley <koins@duck.com>"]
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rco_config = {path = "../rco_config"}
rco_utils = {path = "../rco_utils" }
