[package]
authors = ["Kevin Conley <koins@duck.com>"]
edition = "2021"
name = "xor_params"
rust-version = "1.59"
version = "1.2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rco_config = {path = "../rco_config"}
rco_utils = {path = "../rco_utils" }
